--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconscout/react-unicons": "github:iconscout/react-unicons",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.16",
+    "flowbite-react": "^0.10.1",
     "gsap": "^3.12.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
