--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@gsap/react": "^2.1.1",
@@ -17,6 +18,7 @@
     "@iconscout/react-unicons": "github:iconscout/react-unicons",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.16",
+    "emailjs": "^4.0.3",
     "flowbite-react": "^0.10.1",
     "gsap": "^3.12.5",
     "localforage": "^1.10.0",
